fixed header css bug, added missing whitespace to page title, removed the magic/ dir from the font and bitmap html files

--- a/css/main.styl
+++ b/css/main.styl
@@ -128,6 +128,7 @@ header.main
 
         p
             margin 0 0 0.2em
+            clear both
 
     h1
         font-size 1.2em
